# dbt-locality-poc

./: .env.example  .gitignore  README.md  dbt_project.yml  pyproject.toml
docs/: DATA_ARCHITECTURE.md
macros/: locality_id_col.sql  normalize_segment_name.sql  process_datonics_category.sql
models/locality/: akkio_attributes_latest.sql  akkio_segments.sql  experian_mosaic_segments.sql  identity_to_akkio_deduped.sql  identity_to_locality_deduped.sql  locality_attributes_latest.sql  locality_campaign_exposure.sql  locality_segments.sql  onspot_audience_data.sql  schema.yml  segment_lookup.sql  v_agg_akkio_hh.sql  v_agg_akkio_ind.sql  v_agg_akkio_ind_cpg.sql  v_agg_akkio_ind_media.sql  v_agg_locality_hh.sql  v_agg_locality_ind.sql  v_agg_locality_ind_cpg.sql  v_agg_locality_ind_media.sql  v_akkio_attributes_latest.sql  v_locality_attributes_latest.sql
models/locality/datonics_segments/: README.md  _datonics_segments.yml  datonics_all_segments.sql  datonics_segments_aaid.sql  datonics_segments_aaid.sql.disabled  datonics_segments_ctv.sql  datonics_segments_ctv.sql.disabled  datonics_segments_idfa.sql  datonics_segments_idfa.sql.disabled  datonics_segments_ip.sql  datonics_segments_ip.sql.disabled
seeds/: experian_mosaic_hh_decode.csv
